Finished Index.html and About.html

--- a/About.html
+++ b/About.html
@@ -4,6 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="stylesheet" href="./Site.css" />
+    <link rel="stylesheet" href="./About.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p class="headerName"><b>Dylan Gage</b></p>
+      <nav class="headerLinks">
+        <a href="./Index.html">Home</a>
+        <a class="active" href="./About.html">About</a>
+        <a href="./Portfolio.html">Portfolio</a>
+      </nav>
+    </header>
+    <main>
+      <div>
+        <h1>About me</h1>
+        <section>
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <img
+            src="https://images.pexels.com/photos/3694341/pexels-photo-3694341.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="A desert with a few hills in the backround."
+            height="200"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero quo,
+            ipsa veritatis eligendi earum unde dolores. Impedit doloribus
+            delectus itaque rem quas recusandae, esse voluptate minima fugit
+            sunt expedita qui! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Temporibus facilis numquam commodi beatae tempora
+            explicabo voluptatum repudiandae natus architecto aut! Error ex
+            placeat omnis officiis libero repudiandae nihil delectus eligendi!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ipsum
+            officia natus nisi asperiores, alias quasi earum voluptate provident
+            beatae harum quisquam nobis repudiandae amet est. Ab quia temporibus
+            in.
+          </p>
+        </section>
+        <section>
+          <h2>Lorem ipsum explicabo id excepturi</h2>
+          <img
+            src="https://images.pexels.com/photos/8982815/pexels-photo-8982815.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="A man hicking on top of a rocky mountain"
+            height="200"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            quas magnam harum dolorem distinctio commodi consectetur quae.
+            Delectus consectetur quasi iusto. Omnis adipisci consequatur quia
+            culpa sapiente sequi illo ex. Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Adipisci dignissimos officia
+            aspernatur nobis! Hic, tenetur eaque similique impedit, qui quam
+            nesciunt minus, neque nemo ea consectetur. Odit iusto tempora
+            placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Beatae, ex eius? Et in cumque, non, consectetur ad natus dolor nobis
+            reiciendis.
+          </p>
+        </section>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
