--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="./Site.css" />
+    <link rel="stylesheet" href="./Index.css" />
+    <script src="./Script.js" defer></script>
   </head>
   <body>
-    <head></head>
-    <body></body>
+    <header id="header">
+      <p class="headerName"><b>Dylan Gage</b></p>
+      <nav class="headerLinks">
+        <a class="active" href="./Index.html">Home</a>
+        <a href="./About.html">About</a>
+        <a href="./Portfolio.html">Portfolio</a>
+      </nav>
+    </header>
+    <main>
+      <div>
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h2>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, error.
+          Nisi voluptatibus unde, ea laborum quas adipisci expedita vitae
+          voluptatem aut ratione tempore cupiditate soluta? Asperiores
+          exercitationem praesentium facere ea!
+        </h2>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
