--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./Site.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p class="headerName"><b>Dylan Gage</b></p>
+      <nav class="headerLinks">
+        <a href="./Index.html">Home</a>
+        <a href="./About.html">About</a>
+        <a class="active" href="./Portfolio.html">Portfolio</a>
+      </nav>
+    </header>
+    <main>
+      <div>test</div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
