Finished all the pages

--- a/About.html
+++ b/About.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <!-- This links to the global css file that effects the entire website. -->
     <link rel="stylesheet" href="./Site.css" />
+    <!-- This links to the css file that effects this page. -->
     <link rel="stylesheet" href="./About.css" />
+    <!-- This links to the global js file that effects the entire website. -->
+    <script src="./Script.js" defer></script>
   </head>
   <body>
     <header>
@@ -24,7 +28,6 @@
           <img
             src="https://images.pexels.com/photos/3694341/pexels-photo-3694341.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="A desert with a few hills in the backround."
-            height="200"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero quo,
@@ -45,7 +48,6 @@
           <img
             src="https://images.pexels.com/photos/8982815/pexels-photo-8982815.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="A man hicking on top of a rocky mountain"
-            height="200"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
@@ -62,6 +64,6 @@
         </section>
       </div>
     </main>
-    <footer></footer>
+    <footer><p>Hello</p></footer>
   </body>
 </html>
