--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <!-- This links to the global css file that effects the entire website. -->
     <link rel="stylesheet" href="./Site.css" />
+    <!-- This links to the css file that effects this page. -->
     <link rel="stylesheet" href="./Index.css" />
+    <!-- This links to the global js file that effects the entire website. -->
     <script src="./Script.js" defer></script>
   </head>
   <body>
@@ -28,6 +31,6 @@
         </h2>
       </div>
     </main>
-    <footer></footer>
+    <footer><p>Hello</p></footer>
   </body>
 </html>
