--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <!-- This links to the global css file that effects the entire website. -->
     <link rel="stylesheet" href="./Site.css" />
+    <!-- This links to the css file that effects this page. -->
+    <link rel="stylesheet" href="./Portfolio.css" />
+    <!-- This links to the global js file that effects the entire website. -->
+    <script src="./Script.js" defer></script>
   </head>
   <body>
     <header>
@@ -16,8 +21,69 @@
       </nav>
     </header>
     <main>
-      <div>test</div>
+      <div>
+        <h1>Stuff that i apperently made.</h1>
+        <section>
+          <h2>Lorem ipsum dolor sit amet consectetur</h2>
+          <img
+            src="https://images.pexels.com/photos/17483848/pexels-photo-17483848/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-depicts-a-look-inside-how-ai-microchips-are-designed-it-was-created-by-champ-panupong-techawongthawon-as-part-of-the-v.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="An artists illustration of artificial intelligence (AI). This image depicts a look inside how AI microchips are designed."
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
+            dignissimos earum blanditiis doloribus perferendis suscipit, aperiam
+            ab unde fugiat laboriosam error, odio qui consequatur repellendus,
+            explicabo atque dolor ipsam debitis? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Alias esse commodi voluptas atque,
+            quisquam accusantium tenetur nemo fugit. Nesciunt soluta reiciendis
+            eligendi non quasi quam exercitationem totam laudantium aspernatur
+            voluptate? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Doloribus iusto officia sed doloremque voluptatum voluptas totam cum
+            vitae esse, enim ut veritatis!
+          </p>
+        </section>
+        <section>
+          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+          <img
+            src="https://images.pexels.com/photos/17483850/pexels-photo-17483850/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-depicts-a-look-inside-how-ai-microchips-are-designed-it-was-created-by-champ-panupong-techawongthawon-as-part-of-the-v.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="An artists illustration of artificial intelligence (AI). This image depicts a look inside how AI microchips are designed."
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+            deleniti vel nulla sunt perspiciatis corporis ex saepe ipsam tempore
+            doloremque, veniam esse aliquid magni. Expedita numquam
+            reprehenderit est velit obcaecati? Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Alias voluptatibus unde ullam
+            perspiciatis, rerum earum fugit omnis accusamus saepe obcaecati ipsa
+            reiciendis, adipisci ab culpa! Necessitatibus ad ipsum debitis odit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+            beatae sunt eum. Fuga non aliquid corporis aperiam necessitatibus
+            vero corrupti ex dicta voluptatem nulla, numquam aspernatur
+            molestiae omnis natus! Molestiae?
+          </p>
+        </section>
+        <section>
+          <h2>Lorem ipsum dolor sit amet Harum eaque asperiores</h2>
+          <img
+            src="https://images.pexels.com/photos/17483849/pexels-photo-17483849/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-was-inspired-by-ai-chip-design-and-computer-vision-it-was-created-by-champ-panupong-techawongthawon-as-part-of-the-vis.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="An artists illustration of artificial intelligence (AI). This image was inspired by AI chip design and computer vision."
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
+            ratione sed quidem incidunt ut repudiandae hic expedita consequuntur
+            mollitia minus quibusdam quisquam sapiente ullam temporibus eum
+            autem perferendis, corrupti rerum. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Cum, odit alias unde quidem hic
+            quisquam tempora nam voluptatem exercitationem aliquid odio animi
+            quae ipsam, reprehenderit iusto aut sunt neque quia? Lorem ipsum
+            dolor sit, amet consectetur adipisicing elit. Necessitatibus rem
+            libero ratione laboriosam sunt ullam, magnam dignissimos ea est
+            corporis neque illo aspernatur ipsa, animi in voluptates fugiat,
+            laudantium error!
+          </p>
+        </section>
+      </div>
     </main>
-    <footer></footer>
+    <footer><p>Hello</p></footer>
   </body>
 </html>
