--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,7 +15,7 @@
     <header>
       <p class="headerName"><b>Dylan Gage</b></p>
       <nav class="headerLinks">
-        <a href="./Index.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./About.html">About</a>
         <a class="active" href="./Portfolio.html">Portfolio</a>
       </nav>
