--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
       <p class="headerName"><b>Dylan Gage</b></p>
       <nav class="headerLinks">
-        <a class="active" href="./Index.html">Home</a>
+        <a class="active" href="./index.html">Home</a>
         <a href="./About.html">About</a>
         <a href="./Portfolio.html">Portfolio</a>
       </nav>
