Edited the file structure

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <!-- This links to the global css file that effects the entire website. -->
-    <link rel="stylesheet" href="./Site.css" />
-    <!-- This links to the css file that effects this page. -->
-    <link rel="stylesheet" href="./Portfolio.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- This links to the global js file that effects the entire website. -->
     <script src="./Script.js" defer></script>
   </head>
@@ -22,9 +20,9 @@
     </header>
     <main>
       <div>
-        <h1>Stuff that i apperently made.</h1>
+        <h1 class="notindexh1">Stuff that i apperently made.</h1>
         <section>
-          <h2>Lorem ipsum dolor sit amet consectetur</h2>
+          <h2 class="notindexh2">Lorem ipsum dolor sit amet consectetur</h2>
           <img
             src="https://images.pexels.com/photos/17483848/pexels-photo-17483848/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-depicts-a-look-inside-how-ai-microchips-are-designed-it-was-created-by-champ-panupong-techawongthawon-as-part-of-the-v.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="An artists illustration of artificial intelligence (AI). This image depicts a look inside how AI microchips are designed."
@@ -43,7 +41,9 @@
           </p>
         </section>
         <section>
-          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+          <h2 class="notindexh2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit
+          </h2>
           <img
             src="https://images.pexels.com/photos/17483850/pexels-photo-17483850/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-depicts-a-look-inside-how-ai-microchips-are-designed-it-was-created-by-champ-panupong-techawongthawon-as-part-of-the-v.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="An artists illustration of artificial intelligence (AI). This image depicts a look inside how AI microchips are designed."
@@ -63,7 +63,9 @@
           </p>
         </section>
         <section>
-          <h2>Lorem ipsum dolor sit amet Harum eaque asperiores</h2>
+          <h2 class="notindexh2">
+            Lorem ipsum dolor sit amet Harum eaque asperiores
+          </h2>
           <img
             src="https://images.pexels.com/photos/17483849/pexels-photo-17483849/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-was-inspired-by-ai-chip-design-and-computer-vision-it-was-created-by-champ-panupong-techawongthawon-as-part-of-the-vis.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="An artists illustration of artificial intelligence (AI). This image was inspired by AI chip design and computer vision."
