--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <!-- This links to the global css file that effects the entire website. -->
-    <link rel="stylesheet" href="./Site.css" />
-    <!-- This links to the css file that effects this page. -->
-    <link rel="stylesheet" href="./Index.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- This links to the global js file that effects the entire website. -->
     <script src="./Script.js" defer></script>
   </head>
@@ -22,8 +20,8 @@
     </header>
     <main>
       <div>
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        <h2>
+        <h1 class="indexh1">Lorem ipsum dolor sit amet.</h1>
+        <h2 class="indexh2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, error.
           Nisi voluptatibus unde, ea laborum quas adipisci expedita vitae
           voluptatem aut ratione tempore cupiditate soluta? Asperiores
