--- a/About.html
+++ b/About.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <!-- This links to the global css file that effects the entire website. -->
-    <link rel="stylesheet" href="./Site.css" />
-    <!-- This links to the css file that effects this page. -->
-    <link rel="stylesheet" href="./About.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- This links to the global js file that effects the entire website. -->
     <script src="./Script.js" defer></script>
   </head>
@@ -22,9 +20,9 @@
     </header>
     <main>
       <div>
-        <h1>About me</h1>
+        <h1 class="notindexh1">About me</h1>
         <section>
-          <h2>Lorem ipsum dolor sit amet.</h2>
+          <h2 class="notindexh2">Lorem ipsum dolor sit amet.</h2>
           <img
             src="https://images.pexels.com/photos/3694341/pexels-photo-3694341.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="A desert with a few hills in the backround."
@@ -44,7 +42,7 @@
           </p>
         </section>
         <section>
-          <h2>Lorem ipsum explicabo id excepturi</h2>
+          <h2 class="notindexh2">Lorem ipsum explicabo id excepturi</h2>
           <img
             src="https://images.pexels.com/photos/8982815/pexels-photo-8982815.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="A man hicking on top of a rocky mountain"
