--- a/About.html
+++ b/About.html
@@ -16,6 +16,7 @@
         <a href="./index.html">Home</a>
         <a class="active" href="./About.html">About</a>
         <a href="./Portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </header>
     <main>
