--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="Script.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <p class="headerName"><b>Dylan Gage</b></p>
+      <nav class="headerLinks">
+        <a href="./index.html">Home</a>
+        <a href="./About.html">About</a>
+        <a href="./Portfolio.html">Portfolio</a>
+        <a class="active" href="./contact.html">Contact</a>
+      </nav>
+    </header>
+  </body>
 </html>
