--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,9 @@
         <a class="active" href="./contact.html">Contact</a>
       </nav>
     </header>
+    <main>
+      <div></div>
+    </main>
+    <footer><p>Hello</p></footer>
   </body>
 </html>
