--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,42 @@
       </nav>
     </header>
     <main>
-      <div></div>
+      <div class="form-parent">
+        <form action="./submitsuccessful.html">
+          <section class="form-section-name">
+            <p>Name:</p>
+            <input
+              type="text"
+              id="fname"
+              name="fname"
+              placeholder="First Name"
+            />
+            <input
+              type="text"
+              id="lname"
+              name="lname"
+              placeholder="Last Name"
+            />
+          </section>
+          <section class="form-section-email-phonenumber">
+            <p>Email:</p>
+            <input type="email" id="email" name="email" placeholder="Email" />
+            <p>Phone Number:</p>
+            <input type="tel" id="tel" name="tel" placeholder="Phone Number" />
+          </section>
+          <section class="form-section-textarea">
+            <p>Your inquiry:</p>
+            <textarea
+              rows="7"
+              cols="40"
+              placeholder="Type you text here"
+            ></textarea>
+          </section>
+          <section class="form-section-submit">
+            <button type="submit">Submit</button>
+          </section>
+        </form>
+      </div>
     </main>
     <footer><p>Hello</p></footer>
   </body>
